[tool.poetry]
name = "helminth"
version = "0.1.0"
description = ""
authors = ["Benjamin Allred <ben.allred@elegenbio.com>"]

[tool.poetry.dependencies]
python = "~3.12.0"
networkx = "^2.8.5"
biopython = "^1.79"
boto3 = "^1.28.8"
primer3-py = "^2.0.3"
catboost = "*"
shap = "*"
inquirer = "*"
optuna = "*"
ipywidgets = "*"
IPython = "*"
traitlets = "*"
numpy = "1.26"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
