[package]
name = "speedy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "speedy"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.1", features = ["extension-module"] }
ndarray = "*"
rustworkx-core = { git = "https://github.com/hervold/rustworkx", rev="88825a5"}
petgraph = "*"
bio = "*"
numpy = "*"
